# tapo

./: Cargo.toml  README.md
tapo/: Cargo.toml
tapo/examples/: tapo_p100.rs
tapo/src/: error.rs
tapo/src/api/: api_client.rs  protocol.rs
tapo/src/api/protocol/: discovery_protocol.rs  klap_cipher.rs  klap_protocol.rs  tapo_protocol.rs
