[package]
name = "tapo"
version = "0.7.11"
edition = "2021"
license = "MIT"
authors = ["Mihai Dinculescu <mihai.dinculescu@outlook.com>"]
description = ""
keywords = ["IOT", "tapo", "smart-home", "smart-bulb", "smart-plug"]
categories = ["hardware-support", "embedded", "development-tools"]
readme = "README.md"
repository = "https://github.com/mihai-dinculescu/tapo"

[features]
default = []

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base16ct = { version = "0.2", features = ["alloc"] }
base64 = "0.22"
chrono = { workspace = true, default-features = false, features = [
    "clock",
    "serde",
] }
reqwest = { version = "0.12", features = ["cookies"] }
itertools = "0.13"
lazy_static = "1.4"
log = "0.4"

aes = "0.7"
block-modes = "0.8"
hex = "0.4.3"

sha2 = "0.10"
sha-1 = "0.10"

rand = "0.8"
serde = { version = "1.0", features = ["derive", "serde_derive"] }
serde_json = "1.0"
serde_with = "3.8"
thiserror = "1.0"
uuid = { version = "1.8", features = ["serde", "v4"] }
env_logger = "0.10.2"

[dev-dependencies]
pretty_env_logger = "0.5"
tokio = { workspace = true, default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
